# SLP-Assginment3

./: .gitignore  README.md  main.py  pyproject.toml
__MACOSX/manifests/: ._splits
__MACOSX/manifests/splits/: ._train_ids.txt
data/: dataset.py
manifests/splits/: test_ids.txt  train_ids.txt  valid_ids.txt
model/: decoder.py  duration_predictor.py  encoder.py  fastspeech2.py  length_regulator.py
results/: regen_samples.sh  run_experiments.sh
results/_smoke_test/: wer.txt
results/large_model/: wer.txt
results/lr1e-3_enc4_dec4/: wer.txt
results/lr1e-4_enc4_dec4_s10000/: wer.txt
results/lr3e-4_enc4_dec4/: wer.txt
results/lr3e-4_enc4_dec4_s10000/: vocab.json  wer.txt
