[project]
name = "slp-assignment3"
version = "0.1.0"
description = "FastSpeech2-based TTS for LJ Speech"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "numpy>=1.26.0",
    "wandb>=0.16.0",
    "openai-whisper>=20231117",
    "jiwer>=3.0.3",
    "tqdm>=4.66.0",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "model"]

[tool.uv]
dev-dependencies = []

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
